--- a/src/index.template.html
+++ b/src/index.template.html
@@ -11,7 +11,7 @@
       name="viewport"
       content="initial-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
-    <link rel="icon" type="image/ico" href="icons/favicon.svg" />
+    <link rel="icon" type="image/ico" href="icons/imagotipo.svg" />
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
